# cqupt-ohos-hi3861-course-design

./: .gitattributes  .gitignore  A2040640《课程设计（硬件综合设计开发）》实践指导书（2026）.docx  CHANGELOG.md  FAQ.md  LICENSE  README.md  硬件综合设计开发课程(上课用).pptx
.github/: pull_request_template.md
archive/: README.md
bossay开发板/: README.md  实验用源码（适配bossay开发板）.docx
comfort-fan-final-package/: README.md  SHA256SUMS.txt
comfort-fan-final-package/dashboard/: README.md  package-lock.json  package.json  server.js
comfort-fan-final-package/docs/: MQTT测试指南.md  Web控制台使用指南.md  实机验收记录.md  最终项目联调指南.md  硬件连接说明.md  编译烧录指南.md  项目说明.md
comfort-fan-final-package/evidence/: build-log-summary.md  mqtt-log-sample.md  serial-log-sample.md
comfort-fan-final-package/openharmony_patch/: BUILD.gn  fan_manager.c  network_config.example.h
comfort-fan-final-package/scripts/: build_v6.sh  copy_firmware.ps1  firewall_rules.ps1  mqtt_test.ps1  start_mosquitto.ps1
docs/: course-guide.md  learning-path.md  project-ideas.md
docs/course-design/: 00_一页路线图.md  01_通用配置步骤.md  01_通用配置步骤_合并精华版.md  README.md
docs/smart-home-monitoring/: README.md  分工表.md  测试计划.md  系统设计方案.md  选题报告.md
firmware/final/: README.md  SHA256SUMS.txt
releases/: README.md
resources/: README.md
resources/checksums/: SHA256SUMS.txt
templates/: 分工表.md  测试报告.md  系统设计方案.md  课程设计报告.md  选题报告.md
templates/simple-dashboard/: README.md  app.js  index.html
启航KP_IOT智能开发套件/: OpenHarmony系统传感器-温湿度检测 - 指导手册.docx  README.md  启航KP_IOT开发板环境搭建（参考网址）.txt  开发软件下载地址.txt  配套代码说明.txt
启航KP_IOT智能开发套件/022_OH_KP_OLED_SAMPLE/: BUILD.gn  oled_gui.c  test.c  (+1 more)
(+73 files in other folders)
